--- a/index.html
+++ b/index.html
@@ -213,17 +213,17 @@
                 </div>
 
                 <div class="playback-row">
-                    <!-- Ramp state indicator (toggles ramp on/off) -->
-                    <button id="ramp-state-indicator" class="ramp-state-indicator" aria-label="Toggle ramp mode">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="4 17 10 11 14 15 20 9"/>
-                            <polyline points="14 9 20 9 20 15"/>
-                        </svg>
-                    </button>
                     <!-- Prev chapter (outer left, hidden for non-EPUB) -->
                     <button id="prev-chapter-btn" class="control-button chapter-button" aria-label="Previous chapter" style="display: none;">
                         <svg viewBox="0 0 24 24" fill="currentColor">
                             <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"/>
+                        </svg>
+                    </button>
+                    <!-- Ramp state indicator (toggles ramp on/off) - between chapter and rewind -->
+                    <button id="ramp-state-indicator" class="ramp-state-indicator" aria-label="Toggle ramp mode">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="4 17 10 11 14 15 20 9"/>
+                            <polyline points="14 9 20 9 20 15"/>
                         </svg>
                     </button>
                     <button id="rewind-btn" class="control-button" aria-label="Rewind 10 words">
@@ -1606,7 +1606,7 @@
     // ============================================================
     // BUILD VERSION
     // ============================================================
-    const BUILD_ID = '20260116s';
+    const BUILD_ID = '20260116t';
 
     // ============================================================
     // MAIN APPLICATION
