--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@
     // ============================================================
     // BUILD VERSION
     // ============================================================
-    const BUILD_ID = '20260116u';
+    const BUILD_ID = '20260116w';
 
     // ============================================================
     // MAIN APPLICATION
