--- a/index.html
+++ b/index.html
@@ -206,14 +206,6 @@
 
             <!-- Controls -->
             <div class="reader-controls">
-                <!-- Ramp state indicator (embedded status light, positioned in control bar) -->
-                <button id="ramp-state-indicator" class="ramp-state-indicator" aria-label="Toggle ramp mode">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
-                        <polyline points="4 17 10 11 14 15 20 9"/>
-                        <polyline points="14 9 20 9 20 15"/>
-                    </svg>
-                </button>
-
                 <div class="progress-row">
                     <span id="progress-current" class="progress-text">0</span>
                     <input type="range" id="progress-slider" class="progress-slider" min="0" max="100" value="0">
@@ -230,6 +222,13 @@
                     <button id="prev-btn" class="control-button" aria-label="Previous word">
                         <svg viewBox="0 0 24 24" fill="currentColor">
                             <path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/>
+                        </svg>
+                    </button>
+                    <!-- Ramp indicator (inner utility ring, left side) -->
+                    <button id="ramp-state-indicator" class="control-button ramp-state-indicator" aria-label="Toggle ramp mode">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+                            <polyline points="4 17 10 11 14 15 20 9"/>
+                            <polyline points="14 9 20 9 20 15"/>
                         </svg>
                     </button>
                     <button id="play-btn" class="control-button play-button" aria-label="Play/Pause">
